[package]
name = "prototype"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utopian = { path = "../utopian" }

winit = "0.26.0"
ash = { version = "0.37.0", features = ["linked", "debug"]}
vk-sync = { git = "https://github.com/simplerr/vk-sync-rs" }
ash-window = "0.10"
shaderc = "0.7.3"
glam = "0.20.2"
egui = "0.20.1"
gpu-allocator = "0.18.0"
gpu-profiler = { git = "https://github.com/simplerr/gpu-profiler.git", features = ["use-ash"] }
egui-winit-ash-integration = { git = "https://github.com/simplerr/egui-winit-ash-integration" }
egui-gizmo = { git = "https://github.com/simplerr/egui-gizmo.git" }
rspirv-reflect = { git = "https://github.com/simplerr/rspirv-reflect.git" } # "0.6.0"
puffin = { git = "https://github.com/simplerr/puffin.git" }
puffin_egui = { git = "https://github.com/simplerr/puffin.git" }
log = "0.4"
simple_logger = "5.0.0"
