[package]
name = "utopian"
version = "0.0.1"
edition = "2021"

[dependencies]
winit = "0.26.0"
gpu-allocator = "0.18.0"
ash = { version = "0.37.0", features = ["linked", "debug"]}
ash-window = "0.10"
shaderc = "0.7.3"
rspirv-reflect = { git = "https://github.com/simplerr/rspirv-reflect.git" } # "0.6.0"
image = "0.23.14"
glam = "0.20.2"
dolly = "0.2.0"
gltf = "0.16.0"
